--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,27 @@ body{
 
 li{
     display: inline;
+    margin-right: 3px;
 }
 
 p{
     font-size: 12px;
+    max-width: 250px;
+}
+
+#side-panel{
+    background-color: rgba(0, 0, 0, 0.2);
+    max-width: 275px;
+    overflow-y: auto;
+    height: 640;
+}
+
+.thing {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px;
 }
 
 
-
-
+body {
+    background-image: url("../img/background.jpeg");
 }
